fix: add  supabase client and google sign-in component

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,14 +13,15 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "baseUrl": "src", // ✅ Required for @/* to work
+    "paths": {
+      "@/*": ["*"] // ✅ Resolves @/components/* to src/components/*
+    },
     "plugins": [
       {
         "name": "next"
       }
-    ],
-    "paths": {
-      "@/*": ["./src/*"]
-    }
+    ]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
